# COCCL_PPoPP_AE

./: README.md  build.sh  env.sh  ncclcomp.IAP-A800  run_16nodes.sh  run_2nodes.sh  run_4nodes.sh  run_8nodes.sh  run_communication_benchmarks.sh  run_nccl_tests.sh  run_tests.sh
makefiles/: common.mk
src/: collectives.cc  nccl.h.in
src/coccl-extend/: coccl_alloc.cc
src/coccl-extend/include/: coccl_wrapper.h
src/coccl-extend/primitive/: all_gather_comp.cc  all_reduce_comp.cc  alltoall_comp.cc  reduce_scatter_comp.cc
src/device/compress/: reduce_extend_kernel.cu
src/device/compress/configs/sdp4bit/: sdp4bit_A2A.config  sdp4bit_AG.config  sdp4bit_AG_Inter.config  sdp4bit_AR.config  sdp4bit_RS.config  sdp4bit_RS_Inter.config
src/device/compress/configs/tahquant/: tahquant_AR_Inter.config  tahquant_RS_Inter.config  tahquant_SR.config  tahquant_SR_BWD.config
src/device/compress/configs_training/sdp4bit/: sdp4bit_AG.config  sdp4bit_RS_Inter.config
src/device/compress/configs_training/tahquant/: tahquant_AG.config  tahquant_AR.config  tahquant_SR_BWD.config
src/device/compress/configs_training/zfp_compressor/: zfp_compressor_A2A.config  zfp_compressor_AG.config  zfp_compressor_SR.config
src/device/compress/pans/: CMakeLists.txt  README.md
src/device/compress/pans/coccl_interface/: pans.cu
src/device/compress/pans/examples/: compress.cu  decompress.cu
src/device/compress/pans/include/ans/: BatchPrefixSum.h  GpuANSCodec.h  GpuANSDecode.h  GpuANSEncode.h  GpuANSStatistics.h
src/device/compress/pans/include/utils/: DeviceUtils.h  PtxUtils.h  StaticUtils.h
src/device/compress/pans/src/: GpuANS.cu
src/device/compress/sdp4bit/: sdp4bit_quan.cu
src/device/compress/sdp4bit/includes/: dequantization_utils.h  quantization.h
src/device/compress/sdp4bit/quantization/: dequant_reduce_quant.cu  dequantize_add.cu  dequantize_ht.cu  fused_add.cu  fused_sub.cu  quant_reduce.cu  quant_reduce_ht.cu  stochastic_quantize.cu  stochastic_quantize_ht.cu  sub_quantize.cu  swizzled_quantize.cu  swizzled_quantize_ht.cu
src/device/compress/tahquant/: Makefile  tah_quant.cu
src/device/compress/tahquant/includes/: dequantization_utils.h  fast_hadamard_transform_common.h  quantization.h  quantization_utils.h
src/device/compress/tahquant/quantization/: dequant_reduce_quant.cu  dequantize_heuristic_ht.cu  dequantize_ht.cu  quant_reduce.cu  quant_reduce_ht.cu  stochastic_quantize_heuristic_ht.cu  stochastic_quantize_ht.cu
src/device/compress/tahquant/tahquant/: max_and_swap.cu  swap_back.cu
src/device/compress/zfp/: CMakeLists.txt
src/device/compress/zfp/coccl_interface/: CMakeLists.txt  zfp.c
src/device/compress/zfp/include/: zfp.h
src/device/compress/zfp/src/: CMakeLists.txt  zfp.c
src/device/compress/zfp/src/cuda_zfp/: CMakeLists.txt  cuExdType.cuh  cuZFP.cu  decode.cuh  decode1.cuh  encode1.cuh  shared.h
src/include/: coccl_alloc.h  compress.h  compressor.h  nccl_comp_wrapper.h
src/misc/: coccl_alloc.cc  coll_extend_p2p.cc  compress.cc  nccl_comp_wrapper.cc
tests/coccl-tests/src/: Makefile  all_gather_comp.cu  all_gather_comp_overlap.cu  all_gather_comp_twoshot.cu  all_gather_ring.cu  all_reduce_comp_tripleshot.cu  all_reduce_comp_tripleshot_tl_overlap.cu  all_reduce_comp_twoshot.cu  all_reduce_comp_twoshot_overlap.cu  all_reduce_ring.cu  all_reduce_twoShot.cu  alltoall_comp.cu  alltoall_comp_overlap.cu  reduce_scatter_comp.cu  reduce_scatter_comp_oneshot.cu  reduce_scatter_comp_oneshot_overlap.cu  reduce_scatter_comp_twoshot_new_multi.cu  reduce_scatter_comp_twoshot_tl_overlap.cu  reduce_scatter_ring.cu  sendrecv.cu  sendrecv_comp.cu
training_scripts/: 350M_accBaseline.sh  350M_accCOCCL.sh  350M_accCOCCL_2D.sh  350M_accCOCCL_3D.sh  350M_accCOCCL_SDP4bit_DP.sh  350M_accCOCCL_SDP4bit_Ring.sh  350M_accCOCCL_TAHQUANT.sh  350M_accCOCCL_TAH_TP.sh  350M_accCOCCL_ZFP.sh  350M_accCOCCL_ZFP_DP.sh  350M_accCOCCL_ZFP_TP.sh  run_350M_gpt2_accuracy_and_bandwidth.sh  training_envs.sh
